# src/models/users.ts
@@ -1,18 +1,19 @@
 import mongoose, { Document, model } from "mongoose";
 import { ModelName } from "../types/constants";
 const { Schema } = mongoose;
-const { Users, Posts, Activities } = ModelName;
+const { Users, Roles } = ModelName;
 
 const userSchema = new Schema(
   {
+    // _id: { type: mongoose.Schema.Types.ObjectId, required: false },
     username: { type: String, require: true },
     password: { type: String, require: true },
     status: { type: Number, require: true },
-    roleName: { type: String, require: true },
+    role: {type: mongoose.Types.ObjectId, required: true, ref: Roles },
     createdAt: { type: Date, require: true },
     updatedAt: { type: Date, require: true },
-    posts: [{type: mongoose.Types.ObjectId, required: true, ref: Posts }],
-    activities: [{type: mongoose.Types.ObjectId, required: true, ref: Activities }]
+    // posts: [{type: mongoose.Types.ObjectId, required: true, ref: Posts }],
+    // activities: [{type: mongoose.Types.ObjectId, required: true, ref: Activities }]
     
   },
   {
